# python-project-83

./: .flake8  .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt  settings.py
.github/workflows/: Test.yml  linter-check.yml
page_analyzer/: __init__.py  app.py  database.py  parser.py  repository.py  t.py  validator.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/urls/: checks.html  index.html  show.html  try.html
page_analyzer/try/: APP_.py  db.py  dt.py  marks  try.py  try2.py  try3.py  try4.py
tests/: test_validator.py
