[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "web app 'page-analyzer'"
authors = ["Pavel Kalenchuk <pavel.kalenchuk@gmail.com>"]
license = "free"
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
validators = "^0.20.0"
requests = "^2.31.0"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
gunicorn = "^21.2.0"
icecream = "^2.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
sqlfluff = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
